microservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  labels:
    name: microservice-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: niyazi.com
    http:
      paths:
      - pathType: Exact
        path: /back-end-2/
        backend:
          service:
            name: back-end-2
            port: 
              number: 3000
      # - pathType: Exact
      #   path: /back-end-2/
      #   backend:
      #     service:
      #       name: back-end-2
      #       port: 
      #         number: 3000
